src/test/deca/context/valid/operation-binaire-modulo.deca
// Description:
//    operation binaire modulo
//
// Resultats:
//    
//
// Historique:
//    cree le 06/01/2023

{
    2%1;
}