src/test/deca/context/invalid/operation-binaire-modulo-wrong.deca
// Description:
//    Test 3.33 fail avec modulo 
//
// Resultats:
//    Erreur contextuelle
//    Ligne 12 : Modulo ne se fait qu'avec des int.
//
// Historique:
//    cree le 06/01/2023

{
    1 % 1.0;
}